add resources endpoint
