# openapi.yaml
@@ -37,7 +37,26 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/NodeInfo'
-
+  /resources:
+    get:
+      summary: Retrieves container resources
+      description: Collects harware resources and available models for each container / service.
+      parameters:
+        - name: model_id
+          in: query
+          description: Model ID to check containers for.
+          required: false
+          schema:
+            type: string
+      responses:
+        '200':
+          description: If model_id is provided, returns support information for each container. Otherwise, returns all resources for each container.
+          content:
+            application/json:
+              schema:
+                oneOf:
+                  - $ref: '#/components/schemas/ContainerToModelSupportMap'
+                  - $ref: '#/components/schemas/ContainerToResourcesMap'
   /api/jobs:
     get:
       summary: Retrieves job results
@@ -453,3 +472,143 @@ components:
         Response to a delegated subscription request. Since results are obtained on-chain,
         there is no offchain Job ID, thus this is empty.
       additionalProperties: false
+
+    ContainerToModelSupportMap:
+      type: object
+      description: A mapping from container IDs to arrays of supported model IDs.
+      properties:
+        supported:
+          type: boolean
+          description: Indicates if the model is supported by the container.
+        error:
+          type: string
+          description: Describes the error in checking the model support.
+      required:
+        - supported
+
+    Model:
+      type: object
+      properties:
+        owner:
+          type: string
+          description: The organization that owns the model.
+        name:
+          type: string
+          description: The name of the model.
+        repository:
+          type: string
+          description: The repository where the model is stored.
+        storage:
+          type: string
+          description: The storage backend where the model is stored
+        files:
+          type: array
+          items:
+            type: string
+          description: List of files associated with the model.
+        version:
+          type: string
+          description: The version of the model.
+        ml_type:
+          type: string
+          description: The type of machine learning model.
+
+      required:
+        - owner
+
+    ComputeCapability:
+      type: object
+      properties:
+        id:
+          type: string
+          description: Identifier for the compute capability.
+        type:
+          type: string
+          description: Type of inference service (e.g., CSS, ONNX).
+        task:
+          type: array
+          items:
+            type: string
+          description: List of tasks supported by the compute capability.
+        models:
+          type: array
+          items:
+            $ref: '#/components/schemas/Model'
+          description: List of models available for computation.
+        cached_models:
+          type: array
+          items:
+            $ref: '#/components/schemas/Model'
+          description: List of models that are cached for faster access.
+
+    HardwareCapability:
+      type: object
+      properties:
+        capability_id:
+          type: string
+          description: Unique identifier for the hardware capability.
+        cpu_info:
+          $ref: '#/components/schemas/CPUInfo'
+        disk_info:
+          type: array
+          items:
+            $ref: '#/components/schemas/DiskInfo'
+        os_info:
+          $ref: '#/components/schemas/OSInfo'
+
+    CPUInfo:
+      type: object
+      properties:
+        architecture:
+          type: string
+        byte_order:
+          type: string
+        cores:
+          type: array
+          items:
+            type: string
+        model:
+          type: string
+        num_cores:
+          type: integer
+        vendor_id:
+          type: string
+
+    DiskInfo:
+      type: object
+      properties:
+        available:
+          type: integer
+        filesystem:
+          type: string
+        mount_point:
+          type: string
+        size:
+          type: integer
+        used:
+          type: integer
+
+    OSInfo:
+      type: object
+      properties:
+        name:
+          type: string
+        version:
+          type: string
+
+    ContainerToResourcesMap:
+      type: object
+      properties:
+        service_id:
+          type: string
+          description: The unique identifier for the inference service.
+        compute_capability:
+          type: array
+          description: List of compute capabilities available for the service.
+          items:
+            $ref: '#/components/schemas/ComputeCapability'
+        hardware_capabilities:
+          type: array
+          description: List of hardware capabilities available for the service.
+          items:
+            $ref: '#/components/schemas/HardwareCapability'
